Updated _check_resource constraint to also check if there is any rule defined to be generated at the exact time service work is being created.

--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -36,9 +36,9 @@
                         </group>
                         <field name="calendar_ids">
                             <tree string="Cleaning Time" editable="bottom">
-                                <field name="cleaning_day"/>
-                                <field name="clean_time_from" widget="float_time"/>
-                                <field name="clean_time_to" widget="float_time"/>
+                                <field name="weekday"/>
+                                <field name="time_from" widget="float_time"/>
+                                <field name="time_to" widget="float_time"/>
                                 <field name="employee_ids" widget="many2many_tags"/>
                             </tree>
                         </field>                    
