--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -157,6 +157,7 @@
                             </group>
                             <group>
                                 <field name="partner_id"/>
+                                <field name="product_id"/>
                                 <field name="work_type"/>
                                 <field name="one_time"
                                     attrs="{'invisible': [('work_type', '!=', 'one')]}"
