--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -28,48 +28,63 @@
                     <header>
                         <button name="close_state" string="Done" type="object"
                             help="Finish Service" class="oe_highlight"
-                            attrs="{'invisible': [('state', '=', 'done')]}"
+                            attrs="{'invisible': [('state', '!=', 'open')]}"
                         /> 
                         <button name="cancel_state" string="Cancel" type="object"
                             help="Cancel Service" class="oe_highlight"
-                            attrs="{'invisible': [('state', '=', 'cancel')]}"
+                            attrs="{'invisible': [('state', '!=', 'open')]}"
                         /> 
                         <field name="state" widget="statusbar"/>                     
                     </header>                    
                     <sheet>                        
                         <div class="oe_title">
                             <label for="name" class="oe_edit_only"/>
-                            <h1><field name="name"/></h1>                            
+                            <h1><field name="name" 
+                                attrs="{'readonly': [('state', '!=', 'open')]}"
+                            /></h1>                            
                         </div>
                         <group>
                             <group>
-                                <field name="start_time"/>
-                                <field name="end_time"/> 
-                                <field name="employee_id"/>                                
+                                <field name="start_time" attrs="{'readonly': [('state', '!=', 'open')]}"/>
+                                <field name="end_time" attrs="{'readonly': [('state', '!=', 'open')]}"/> 
+                                <field name="employee_id" attrs="{'readonly': [('state', '!=', 'open')]}"/>                                
                                 <field name="duration" invisible="1"/>                                                               
-                                <field name="work_type"/>
+                                <field name="work_type" attrs="{'readonly': [('state', '!=', 'open')]}"/>
                             </group>
                             <group>
                                 <field name="service_id"
                                     context="{'default_partner_id': partner_id}"
                                     onchange="onchange_service_id()"
+                                    attrs="{'readonly': [('state', '!=', 'open')]}"
                                 />
                                 <field name="partner_id"
                                     onchange="onchange_partner_id()"
+                                    attrs="{'readonly': [('state', '!=', 'open')]}"
                                 />
-                                <field name="address_archive_id"/>
+                                <field name="address_archive_id"
+                                    attrs="{'readonly': [('state', '!=', 'open')]}"
+                                />
+
                             </group>
                         </group>
                         <notebook>
                             <page string="Additional Info">
                                 <group>
                                     <group>
-                                        <field name="description"/>
-                                        <label for="attention"/>
-                                        <span style="color: red"><field name="attention"/></span>
+                                        <field name="description"
+                                            attrs="{'readonly': [('state', '!=', 'open')]}"
+                                        />
+                                        <label for="attention"
+                                            attrs="{'readonly': [('state', '!=', 'open')]}"
+                                        />
+                                        <span style="color: red"><field name="attention"
+                                            attrs="{'readonly': [('state', '!=', 'open')]}"
+                                        /></span>
                                     </group>
                                     <group>
-                                        <field name="note"/>
+                                        <field name="note"
+                                            attrs="{'readonly': [('state', '!=', 'open')]}"
+                                        />
                                     </group> 
                                 </group> 
                             </page>
