--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -56,7 +56,7 @@
                                 <field name="service_id"
                                     context="{'default_partner_id': partner_id}"
                                     onchange="onchange_service_id()"
-                                    attrs="{'required': True, 'readonly': [('state', '!=', 'open')]}"
+                                    attrs="{'readonly': [('state', '!=', 'open')]}"
                                 />
                                 <field name="partner_id"
                                     onchange="onchange_partner_id()"
