decoupled calendar_service_payrol into two modules

--- a/hr_timesheet_employee/views/hr_timesheet_view.xml
+++ b/hr_timesheet_employee/views/hr_timesheet_view.xml
@@ -9,7 +9,10 @@
             <field name="arch" type="xml">
                 <field name="user_id" position="after">
                     <field name="officer"/>
-                    <field name="employee_id" attrs="{'invisible': [('officer', '=', False)]}"/>
+                    <field name="employee_id" 
+                        attrs="{'invisible': [('officer', '=', False)], 'required': [('officer', '=', True)]}"
+                        onchange="onchange_employee_id()"
+                    />
                 </field>
             </field>
         </record>
@@ -20,7 +23,10 @@
             <field name="arch" type="xml">
                 <field name="user_id" position="after">
                     <field name="officer"/>
-                    <field name="employee_id" attrs="{'invisible': [('officer', '=', False)]}"/>
+                    <field name="employee_id" 
+                        attrs="{'invisible': [('officer', '=', False)], 'required': [('officer', '=', True)]}"
+                        onchange="onchange_employee_id()"
+                    />
                 </field>
             </field>
         </record>
