Refactored methods and implemented payroll timesheet functionality

--- a/hr_timesheet_employee/views/hr_timesheet_view.xml
+++ b/hr_timesheet_employee/views/hr_timesheet_view.xml
@@ -10,7 +10,7 @@
                 <field name="user_id" position="after">
                     <field name="officer"/>
                     <field name="employee_id" 
-                        attrs="{'invisible': [('officer', '=', False)], 'required': [('officer', '=', True)]}"
+                        attrs="{'readonly': [('officer', '=', False)], 'required': [('officer', '=', True)]}"
                         onchange="onchange_employee_id()"
                     />
                 </field>
