Refactored code and decoupled modules into more logical units  - Decoupled modules are now less dependent on each other. This    gives more control when installing modules you need.  - Created new module that holds Domestic Cleaning specific fields.    Other modules are not dependend on domestic_cleaning module, so whole    functionality can be used for any similar business logic without having    not needed fields and views.

--- a/base_address_management/views/res_partner_view.xml
+++ b/base_address_management/views/res_partner_view.xml
@@ -104,27 +104,7 @@
                         <field name="attention"/>
                     </span>
                 </field>                
-                <page string="Accounting" position="before">
-                    <page string="House Info">
-                        <group>
-                            <group string="Keys">
-                                <field name="have_key"/>
-                                <field name="key_numb"
-                                    attrs="{'invisible': [('have_key', '=', False)]}"
-                                />
-                                <field name="key_left"/>
-                                <field name="where_key"
-                                    attrs="{'invisible': [('key_left', '=', False)]}"
-                                />
-                            </group>
-                            <group string="Alarm">
-                                <field name="house_alarm_on"/>
-                                <field name="house_alarm_off"/>
-                                <field name="gate_alarm_on"/>
-                                <field name="gate_alarm_off"/>
-                            </group>
-                        </group>
-                    </page>
+                <page string="Internal Notes" position="before">
                     <page String="Addresses Archive">
                         <button name="init_archive" string="Init Archive" 
                             type="object" class="oe_highlight"
