--- a/calendar_service_crm/views/crm_lead_view.xml
+++ b/calendar_service_crm/views/crm_lead_view.xml
@@ -37,21 +37,20 @@
                     />
                 </field>                                            
                 <page string="Internal Notes" position="after">
-                    <page string="Cleaning Info">
+                    <page string="Service Time">
                         <group>
                             <group>
                                 <field name="product_id"/>                            
                             </group>
                             <group>
-                                <field name="desirable_duration" widget="float_time"/>
                             </group>
                         </group>
                         <group>
-                            <field name="cleaning_calendar_ids">
-                                <tree string="Cleaning Time" editable="bottom">
-                                    <field name="cleaning_day"/>
-                                    <field name="clean_time_from" widget="float_time"/>
-                                    <field name="clean_time_to" widget="float_time"/>
+                            <field name="desired_time_ids">
+                                <tree string="Service Time" editable="bottom">
+                                    <field name="day"/>
+                                    <field name="time_from" widget="float_time"/>
+                                    <field name="time_to" widget="float_time"/>
                                 </tree>
                             </field>
                         </group>
@@ -91,27 +90,16 @@
                     />
                 </field>                        
                 <page string="Internal Notes" position="after">
-                    <page string="Cleaning Info">
+                    <page string="Service Time">
                         <group>
-                            <group>
-                                <field name="product_id"/>
-                                <field name="nmb_bathrooms"/>
-                                <field name="nmb_bedrooms"/>
-                                <field name="pets_info"/>                            
-                            </group>
-                            <group>
-                                <field name="desirable_duration" widget="float_time"/>
-                                <field name="nmb_other_rooms"/>
-                                <field name="nbm_residents"/>
-                                <field name="cleaning_note"/>
-                            </group>
+                            <field name="product_id" style="width: 30%%"/>                            
                         </group>
                         <group>
-                            <field name="cleaning_calendar_ids">
-                                <tree string="Cleaning Time" editable="bottom">
-                                    <field name="cleaning_day"/>
-                                    <field name="clean_time_from" widget="float_time"/>
-                                    <field name="clean_time_to" widget="float_time"/>
+                            <field name="desired_time_ids">
+                                <tree string="Service Time" editable="bottom">
+                                    <field name="day"/>
+                                    <field name="time_from" widget="float_time"/>
+                                    <field name="time_to" widget="float_time"/>
                                 </tree>
                             </field>
                         </group>
