--- a/calendar_service_timesheet/views/calendar_service_view.xml
+++ b/calendar_service_timesheet/views/calendar_service_view.xml
@@ -10,7 +10,7 @@
             <field name="inherit_id" ref="calendar_service.view_calendar_service_work_form"/>
             <field name="arch" type="xml">
                 <field name="address_archive_id" position="after">
-                    <field name="account_id"/>
+                    <field name="account_id" attrs="{'readonly': [('state', '!=', 'open')]}"/>
                 </field>    
             </field>
         </record>
