--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -40,7 +40,7 @@
                                 <field name="time_from" widget="float_time"/>
                                 <field name="time_to" widget="float_time"/>
                                 <field name="second_week"/>
-                                <field name="last_week_gen" attrs="{'invisible': [('second_week', '=', False)]}"/>
+                                <field name="last_week_gen" attrs="{'readonly': [('second_week', '=', False)]}"/>
                                 <field name="employee_ids" widget="many2many_tags"/>
                             </tree>
                         </field>                    
