--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -41,7 +41,8 @@
                                 <field name="time_to" widget="float_time"/>
                                 <field name="second_week"/>
                                 <field name="last_week_gen" attrs="{'readonly': [('second_week', '=', False)]}"/>
-                                <field name="employee_ids" widget="many2many_tags"/>
+                                <field name="product_id"/>
+                                <field name="employee_ids" attrs="{'required': True}" widget="many2many_tags"/>
                             </tree>
                         </field>                    
                     </sheet>
