--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -102,7 +102,7 @@
                             </group>
                             <group>
                                 <field name="active"/>
-                                <field name="next_gen_time"/>
+                                <field name="next_gen_time" attrs="{'readonly': True}"/>
                                 <field name="init"/>
                             </group>
                         </group>
