--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -228,6 +228,7 @@
                 <search string="Search Services">
                     <field name="name" string="Service / Customer" filter_domain="['|',('partner_id','ilike',self),('name','ilike',self)]"/>
                     <field name="partner_id" filter_domain="[('partner_id','child_of',self)]"/>
+                    <field name="state" filter_domain="[('state', '=', 'open')]"/>
                     <separator/>
                     <filter string="My Services"
                             domain="[('user_id','=',uid)]"
