--- a/hr_payroll_timesheet/views/hr_contract_view.xml
+++ b/hr_payroll_timesheet/views/hr_contract_view.xml
@@ -6,14 +6,8 @@
             <field name="model">hr.contract</field>
             <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
             <field name="arch" type="xml">                
-                <field name="wage" position="replace">
-                    <field name="fixed_salary"/>
-                    <field name="wage"
-                        attrs="{'invisible': [('fixed_salary', '=', False)]}"
-                    />
-                    <field name="salary_per_h"
-                        attrs="{'invisible': [('fixed_salary', '=', True)], 'required': [('fixed_salary', '=', False)]}"
-                    />                    
+                <field name="wage" position="before">
+                    <field name="salary_per_h"/>                 
                 </field>                                 
             </field>
         </record>     
