--- a/calendar_service/wizard/rule_change_view.xml
+++ b/calendar_service/wizard/rule_change_view.xml
@@ -48,9 +48,10 @@
             <field name="arch" type="xml">
                 <form string="Rule Change">
                     <sheet>
+                        <field name="recurrent_id" invisible="1"/>
                         <group>
                             <group>
-                                <field name="rule_id" attrs="{'required': True}"/>
+                                <field name="rule_id" attrs="{'required': True}" context="{'default_recurrent_id': recurrent_id}"/>
                                 <field name="change_type"/>
                             </group>
                             <group>
@@ -83,6 +84,7 @@
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
             <field name="view_id" ref="view_recurrent_rule_change_form"/>
+            <field name="context">{'default_recurrent_id': active_id}</field>
             <field name="target">new</field>
         </record>
 
