[FIX] Changed resource checking.  - Now it lets skip rule checking if generated service match is found for    that time and resource and it is cancelled. In other words it means that    resource was freed for that time being (it should be exact match for time).  - Implemented second checking for unfilled values in service works. This is    needed because it was possible to bypass automatic filling if work service    was filled before its service was.

--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -10,6 +10,7 @@
             <field name="priority">2</field>
             <field name="arch" type="xml">
                 <tree string="Recurrent Rule">
+                    <field name="name"/>
                     <field name="partner_id"/>
                     <field name="user_id"/>
                     <field name="write_date"/>
